first round of grammer edits

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1624,6 +1624,13 @@ author =       "W. Hackbusch",
 	keywords = "Wakefield acceleration, Staging, Two beam acceleration, High gradient"
 }
 
+@online{boost,
+	author = {},
+	title = {},
+	year = {},
+	url = {http://boost-spirit.com/},
+	urldate = {}
+}
 
 
 
