more small bib changes

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -54,11 +54,7 @@ keywords = "Maxwell equation, PML, Complex-symmetric eigenvalue problem, Jacobiâ
 
 @techreport{opal,
 title = {The OPAL (Object Oriented Parallel Accelerator Library) Framework},
-author = {Andreas Adelmann, Christian Baumgarten, Matthias Frey, Achim Gsell, Valeria Rizzoglio,
-Jochem Snuverink (PSI) and Christof Metzger-Kraus and Yves Ineichen and
-Steve Russell (LANL) and Chuan Wang (CIAE) and
-Suzanne Sheehy and Chris Rogers (RAL) and
-Daniel Winklehner (MIT)},
+author = {A. Adelmann and Ch. Baumgarten and M. Frey and A. Gsell and V. Rizzoglio and J. Snuverink (PSI) and Ch. Metzger-Kraus and Y. Ineichen and St. Russell (LANL) and Ch. Wang (CIAE) and S. Sheehy and Ch. Rogers (RAL) and D. Winklehner (MIT)},
 institution = {Paul Scherrer Institut},
 number = {PSI-PR-08-02},
 year = {(2008-2018)}
