--- a/paper/prab.tex
+++ b/paper/prab.tex
@@ -161,7 +161,7 @@ Fields, such as material science, chemistry, the biosciences, particle
   particle accelerators, both as research but as well as practical tools.
 Achieving the required performance in the design, commissioning, and operation
   of accelerator facilities is a complex and versatile problem.
-Today, tuning machine parameters, e.g., bunch charge, emission time and
+Today, tuning machine parameters, e.g. bunch charge, emission time and
   various parameters of beamline elements, is most commonly done manually by
   running simulation codes to scan the parameter space.
 This approach is tedious, time consuming and can be error prone.
@@ -297,7 +297,7 @@ Once the shape of the Pareto front has been determined, the buyer can
   effect on the optimality criteria, converging to the preferred solution.
 This is called \textit{a posteriori} preference specification since we select
   a solution after all possible trade-offs have been presented to us.
-An alternative is to specify preference \textit{a priori}, e.g., by
+An alternative is to specify preference \textit{a priori}, e.g. by
   weighting (specifying preference before solving the problem) and combining
   all objectives into one and applying a single-objective method to solve the
   problem (yielding only one solution).
@@ -678,7 +678,7 @@ In this stage, the AST can be evaluated bottom-up and the desired result is
 
 To improve the expressive power of objectives and constraints we introduced a
   simple mechanism to define and call custom functions in expressions.
-Using simple functors, e.g., as the one shown in Listing 4 to compute an
+Using simple functors, e.g. as the one shown in Listing 4 to compute an
   average over a set of data points, enriches expressions with custom
   functions.
 Custom function implementations overload the \texttt{()} parenthesis operator.
