starting to edit theor-exp

--- a/paper/prab.tex
+++ b/paper/prab.tex
@@ -840,8 +840,8 @@ opt: OPTIMIZE, OBJECTIVES=objs, DVARS=dvars, CONSTRAINTS=constrs;
 
 \section{CONCLUSIONS} \label{sec:conclusions}
 
-We presented a general-purpose framework for solving multi-objective
-  optimization problems.
+A general-purpose framework for solving multi-objective
+  optimization problems was presented.
 Its modular design simplifies the application to simulation-based optimization
   problems for a wide range of problems and allows to exchange the
   optimization algorithm.
