--- a/paper/theor-experiment.tex
+++ b/paper/theor-experiment.tex
@@ -1,7 +1,7 @@
 \section{EXPERIMENTS} \label{sec:experiments}
 
-In this section we present numerical results of the validation benchmark and
-  discuss optimization of a photoinjector operated in the space charge dominated regime.
+In this section a numerical results of the validation benchmark and
+  optimization of a photoinjector operated in the space charge dominated regime is presented.
 
 \subsection{Optimizer Validation}
 
