--- a/paper/prab.tex
+++ b/paper/prab.tex
@@ -872,13 +872,16 @@ The flexibility of being able to adapt both ends of the optimization
 %  optimization problem. %and the parallel performance will be further evaluated
 %  in a forthcoming publication.
 %The number of individuals is the only limiting factor.
-In this paper we applied the framework to a beam dynamics problem at the AWA.
-Optimization of the 3D beam size and energy spread was accomplished.
+The framework was integrated into OPAL, and used 
+to study a beam dynamics problem at the AWA.
 A scan of time step and hyper parameters was done to determine computational settings.
 Then a full scale physics optimization was performed.
-The resulting beam tune can and will be used in future TBA experiments at the AWA.
-This problem also took advantage of the frameworks massively parallel capabilities by
-running on 2624 processes on Bebop at LCRC.
+Optimization of the 3D beam size and energy spread was accomplished.
+The TBA beam line presented is currently being installed at the AWA.
+Once installation is complete, 
+the results shown here will guide future experiments at the AWA.
+%This problem also took advantage of the frameworks massively parallel capabilities by
+%running on 2624 processes on Bebop at LCRC.
 
 In contrast to approaches that are tightly coupled to the optimization
   algorithm, the range of possible applications is much wider.
@@ -890,7 +893,7 @@ Finally, combining the presented multi-objective optimization framework with
   for better understanding and improving the decision making process in the
   design and operation of particle accelerators.
 
-Outlook, .... 
+ 
 
 
 \section{ACKNOWLEDGMENT}
