--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1623,7 +1623,7 @@ author =       "W. Hackbusch",
 	number={4}, 
 	journal={Journal of Plasma Physics}, 
 	publisher={Cambridge University Press}, 
-	author={GAI, W. and POWER, J. G. and JING, C.}, year={2012}, pages={339–345}
+	author={Gai, W. and Power, J. G. and Jing, C.}, year={2012}, pages={339–345}
 }
 
 @article{JING201872,
@@ -1640,20 +1640,19 @@ author =       "W. Hackbusch",
 }
 
 @misc{boost,
-	key =		 "Boost Spirit",
-	title =	 "{The Trilinos Project Home Page}",
+	title =	 "{The Boost Spirit Home Page}",
 	note =	 "\url{http://boost-spirit.com/}"
 }
 
 @misc{boost2,
-	key =		 "Boost Variant",
-	title =	 "{}",
+	title =	 "{Chapter 45. Boost.Variant}",
+	author = "{ E. Friedman and I. Maman }",
 	note =	 "\url{www.boost.org/doc/html/variant.html}"
 }
 
 @misc{boost3,
-	key =		 "Boost Functions",
-	title =	 "{}",
+	title =	 "{Chapter 15. Boost.Function}",
+	author = " D. Gregor ",
 	note =	 "\url{www.boost.org/libs/function/}"
 }
 
