--- a/paper/prab.tex
+++ b/paper/prab.tex
@@ -1,11 +1,12 @@
 \documentclass[%
-reprint,
+preprint,
 %superscriptaddress,
 %groupedaddress,
 %unsortedaddress,
 %runinaddress,
 %frontmatterverbose, 
-%preprint,
+preprint,
+linenumbers,
 %showpacs,preprintnumbers,
 %nofootinbib,
 %nobibnotes,
